git additions from spotify api added!

--- a/app/src/main/res/layout/fragment_album_view.xml
+++ b/app/src/main/res/layout/fragment_album_view.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/primary"
     android:layout_height="match_parent"
+    android:background="@color/primary"
     tools:context=".ui.fragments.others.AlbumViewFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -43,10 +43,10 @@
         android:layout_width="234dp"
         android:layout_height="234dp"
         android:layout_marginTop="24dp"
-        android:src="@drawable/ariaa"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-        app:layout_constraintTop_toBottomOf="@+id/imgBack" />
+        app:layout_constraintTop_toBottomOf="@+id/imgBack"
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/txtAlbumName"
@@ -78,8 +78,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="TextView"
-        android:textStyle="bold"
         android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imgArtist"
         app:layout_constraintStart_toEndOf="@+id/imgArtist"
         app:layout_constraintTop_toTopOf="@+id/imgArtist" />
@@ -90,9 +90,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Album"
-        android:textStyle="bold"
-        android:textSize="12sp"
         android:textColor="@color/txt_gray"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/imgArtist" />
 
@@ -102,9 +102,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="TextView"
-        android:textStyle="bold"
-        android:textSize="12sp"
         android:textColor="@color/txt_gray"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
@@ -134,10 +134,20 @@
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/imgLike">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
 
