--- a/app/src/main/res/layout/track_listview.xml
+++ b/app/src/main/res/layout/track_listview.xml
@@ -20,12 +20,12 @@
         android:id="@+id/txtArtistName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/btn_gray"
-        android:textStyle="bold"
-        android:textSize="12sp"
         android:layout_marginTop="5dp"
         android:text="TextView"
+        android:textColor="@color/btn_gray"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imgArtist"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imgArtist"
         app:layout_constraintTop_toBottomOf="@+id/imgArtist" />
 </androidx.constraintlayout.widget.ConstraintLayout>
