--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -32,6 +32,9 @@
         <action
             android:id="@+id/action_homeFragment_to_albumViewFragment"
             app:destination="@id/albumViewFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_artistViewFragment"
+            app:destination="@id/artistViewFragment" />
     </fragment>
     <action
         android:id="@+id/toSearch"
@@ -123,6 +126,11 @@
         android:name="com.example.spotifyclone.ui.fragments.others.AlbumViewFragment"
         android:label="fragment_album_view"
         tools:layout="@layout/fragment_album_view" />
+    <fragment
+        android:id="@+id/artistViewFragment"
+        tools:layout="@layout/fragment_artist_view"
+        android:name="com.example.spotifyclone.ui.fragments.others.ArtistViewFragment"
+        android:label="ArtistViewFragment" />
 
 
 </navigation>
