--- a/app/src/main/res/layout/item_album_tracks.xml
+++ b/app/src/main/res/layout/item_album_tracks.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/primary"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp">
 
     <TextView
         android:id="@+id/txtTrackName"
