--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,10 @@
         <item name="android:textStyle">bold</item>
         <item name="android:layout_gravity">center</item>
     </style>
+
+    <style name="MySeekBar" parent="Widget.AppCompat.SeekBar">
+        <item name="android:progressBackgroundTint">@color/white</item>
+        <item name="android:progressTint">@color/txt_gray</item>
+        <item name="android:thumbTint">@color/white</item>
+    </style>
 </resources>
